tests/ui/treat-err-as-bug/panic-causes-oom-112708.stderr
error: denote infinite loops with `loop { ... }`
  --> $DIR/panic-causes-oom-112708.rs:10:5
   |
LL |     while true {}
   |     ^^^^^^^^^^ help: use `loop`
   |
note: the lint level is defined here
  --> $DIR/panic-causes-oom-112708.rs:9:12
   |
LL |     #[deny(while_true)]
   |            ^^^^^^^^^^

error: the compiler unexpectedly panicked. this is a bug.

query stack during panic:
thread panicked while processing panic. aborting.
